[tool.poetry]
name = "theNewsroom"
version = "0.1.0"
description = "which country is in the spotlight"
authors = ["Andrea Giacobino <no.andrea@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pycountry = "^19.8.18"
feedparser = "^5.2.1"
psycopg2 = "^2.8.4"
trafilatura = "^0.3.0"
nltk = "^3.4.5"
beautifulsoup4 = "^4.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
